Fix many issues *Fix fail preloading stops the loop *Fix font not being visible on white images *Set change to 10 seconds *Add new quotes

--- a/src/App.css
+++ b/src/App.css
@@ -29,4 +29,5 @@ img {
 
 p{
   color: #fff;
+  text-shadow: 2px 2px 5px #000000;
 }
